--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 
 body, html {
     font-family: "Baloo";
-    font-size: 17px;
+    font-size: 1rem;
     margin: 0;
+    min-width: 16svw;
     height: 100vh;
     overflow: hidden;
     background-color: #000;
@@ -19,17 +20,23 @@ body, html {
     right: 0;
     bottom: 0;
     margin: auto;
-    width: 50%;
-    transition: all 0.5s ease-out;
+    width: 53vh;
+    transition: all 0.4s ease-out;
 }
 
 .logo:hover {
-    width: 51.5%;
-    transition: all 0.35s ease-in;
+    width: 54.5vh;
+    transition: all 0.3s ease-in;
 }
 
 * {
     color: #C8FF00;
+}
+.midii {
+    letter-spacing: 4px;
+    font-size: 4vh; 
+    text-align: center; 
+    margin: 1.25vh;
 }
 
 .navbar {
@@ -43,34 +50,34 @@ body, html {
 
 .navbar li {
     display: inline-block;
-    letter-spacing: 6px;
-    font-size: 24px;
-    margin: 6px 5px;
+    letter-spacing: 0.175em;
+    font-size: 1.5rem;
+    margin: 0.375rem 0.3125rem;
 }
 
 .navbar a {
-    border: solid;
-    padding: 0 24px 0 28px;
+    border: solid 3px;
+    padding: 0 20px 0 25px;
     text-decoration: none;
-    border-radius: 24px;
+    border-radius: 2em;
     transition: all 0.125s ease-out;
     display: inline-block;
 }
 
 .navbar a:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition: all 0.125s ease-in;
 }
 
-.roundALL { border-radius: 5px; }
-.roundL { border-radius: 5px 0 0 5px; }
-.roundR { border-radius: 0 5px 5px 0; }
-.roundT { border-radius: 5px 5px 0 0; }
-.roundB { border-radius: 0 0 5px 5px; }
-.roundBR { border-radius: 0 0 5px 0; }
-.roundBL { border-radius: 0 0 0 5px; }
-.roundTR { border-radius: 0 5px 0 0; }
-.roundTL { border-radius: 5px 0 0 0; }
+.roundALL { border-radius: 1.5em; }
+.roundL { border-radius: 1.5em 0 0 1.5em; }
+.roundR { border-radius: 0 1.5em 1.5em 0; }
+.roundT { border-radius: 1.5em 1.5em 0 0; }
+.roundB { border-radius: 0 0 1.5em 1.5em; }
+.roundBR { border-radius: 0 0 1.5em 0; }
+.roundBL { border-radius: 0 0 0 1.5em; }
+.roundTR { border-radius: 0 1.5em 0 0; }
+.roundTL { border-radius: 1.5em 0 0 0; }
 
 ::-webkit-scrollbar {
     width: 6px;
@@ -88,7 +95,7 @@ section {
     opacity: 0;
     visibility: hidden;
     overflow-y: auto;
-    transition: opacity 0.10s cubic-bezier(0, 0, 0.21, 1), visibility 0s 0.10s;
+    transition: opacity 0.1s cubic-bezier(0, 0, 0.21, 1), visibility 0s 0.1s;
 }
 
 a[id="start"]:target ~ #start,
@@ -99,4 +106,45 @@ a[id="edt"]:target ~ #edt {
     opacity: 1;
     visibility: visible;
     transition: opacity 0.45s cubic-bezier(0, 0, 0.21, 1), visibility 0s;
+}
+
+@media screen and (max-width: 768px) {
+    body, html {
+        font-size: 0.925rem;
+    }
+
+    .logo {
+        width: 40vw;
+    }
+
+    .logo:hover {
+        width: 42vw;
+    }
+
+    .midii {
+        font-size: 3.5vh;
+    }
+
+    .navbar li {
+        font-size: 1.25rem;
+        margin: 0.25rem 0.25rem;
+    }
+
+    .navbar a {
+        border-radius: 1.5em;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .logo {
+        width: 53vw;
+    }
+
+    .logo:hover {
+        width: 54.5vw;
+    }
+
+    .navbar a {
+        border-radius: 1.5em;
+    }
 }
