--- a/style.css
+++ b/style.css
@@ -36,14 +36,11 @@ body, html {
     letter-spacing: 4px;
     font-size: 4vh; 
     text-align: center; 
-    margin: 1.25vh;
+    margin: 1.5vh;
 }
 
 .navbar {
     text-align: center;
-}
-
-.navbar ul {
     margin: 0;
     padding: 0;
 }
@@ -52,7 +49,7 @@ body, html {
     display: inline-block;
     letter-spacing: 0.175em;
     font-size: 1.5rem;
-    margin: 0.375rem 0.3125rem;
+    margin: 0 0.3125rem;
 }
 
 .navbar a {
@@ -108,7 +105,7 @@ a[id="edt"]:target ~ #edt {
     transition: opacity 0.45s cubic-bezier(0, 0, 0.21, 1), visibility 0s;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
     body, html {
         font-size: 0.925rem;
     }
