--- a/style.css
+++ b/style.css
@@ -205,3 +205,24 @@ footer {
     }
 }
 /* ---------------------------------------------- */
+
+/* Snow fall effect by kirupa (Temporary code for the season)
+   https://www.kirupa.com/html5/the_falling_snow_effect.htm */
+
+   #snowflakeContainer {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    display: none;
+  }
+
+  .snowflake {
+    position: fixed;
+    background-color: #FFFFFF;
+    user-select: none;
+    z-index: 1000;
+    pointer-events: none;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+  }
