--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ footer {
     display: inline-block;
     text-align: center;
     width: 100%;
-    bottom: 0;
+    top: 90%;
 }
 
 ::-webkit-scrollbar {
